syntax = "proto3";

option go_package = "github.com/leeavital/protoc-gen-gostreamer/example/pb";

package foo.bar;

enum Color {
  Grey = 0;
  Red = 1;
  Blue = 2;
}

message Thing2 {
  int64 z = 2;
  int32 myThirtyTwo = 5;
  fixed64 myFixed64 = 6;
  sfixed64 mySfixed64 = 7;
  double ratio = 8;
  float otherRatio = 9;

  bytes  rawMessage = 10;

  repeated int32  myIntegers = 11;

  fixed32 myFixed32 = 12;

  sfixed32 mySfixed32 = 13;


  sint32 mySint32 = 14;
  sint64  mySint64 = 15;
}

message Thing {
  int64 x = 1;
  int64 y = 2;
  repeated Thing2 things = 3;
  repeated string myname = 4;

  SubMessage s = 5;

  bool is_valid = 6;
  Color what_color = 7;
  uint64  myBigUint = 8;
  uint32 mySmallerUint = 9;

  map<int32, uint32> my_map = 10;

  message SubMessage {
    int64 x = 1;
  }
}
